fix hamburger menu from being cut off on small screens

--- a/app/client/src/styles/components/top-bar.styl
+++ b/app/client/src/styles/components/top-bar.styl
@@ -71,3 +71,10 @@
         transform rotate(-45deg)
         -webkit-transform-origin left bottom
         transform-origin left bottom
+
+  @media screen and (max-width: 400px)
+    .nav-left
+      display none
+
+    .nav-center .nav-item
+      font-size .75rem
